--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-selenium>=4.15.0
-tqdm>=4.66.1
-PyQt6>=6.5.0
-fpdf2>=2.7.4
-Pillow>=9.3.0
+requests
+beautifulsoup4
+selenium
+tqdm
+PyQt6
+fpdf2
+Pillow
+ebooklib
